--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>勉強会追加変更</h1>
-    <<button type="button" name="button">ボタン</button>
+    <<button type="button" name="button">ボタンを変えました</button>
 
   </body>
 </html>
